--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ include_directories(
         external/glfw-3.1.2/include/
         external/glm-0.9.7.1/
         external/glad/include/
+        external/headeronly/
         include/
         .
 )
@@ -63,7 +64,7 @@ add_definitions(
         -DGL_SILENCE_DEPRECATION
 )
 
-add_executable(assignment lib/scene3d/object3d.cpp lib/mesh/mesh.cpp lib/application.cpp lib/mesh/geometry.cpp lib/stb_image_impl.cpp lib/mesh/material.cpp lib/scene3d/renderer.cpp lib/shader/shader.cpp src/appmain.cpp lib/util/texture.cpp)
+add_executable(assignment lib/scene3d/object3d.cpp lib/mesh/mesh.cpp lib/application.cpp lib/mesh/geometry.cpp lib/stb_image_impl.cpp lib/mesh/material.cpp lib/scene3d/renderer.cpp lib/shader/shader.cpp src/appmain.cpp lib/util/texture.cpp lib/importer/obj_loader.cpp)
 target_link_libraries(assignment
         ${ALL_LIBS}
         )
@@ -74,5 +75,7 @@ create_target_launcher(assignment WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}
 configure_file(lib/shader/phong.fsh lib/shader/phong.fsh COPYONLY)
 configure_file(lib/shader/phong.vsh lib/shader/phong.vsh COPYONLY)
 
-configure_file(lib/shader/basic.fsh lib/shader/basic.fsh COPYONLY)
-configure_file(lib/shader/basic.vsh lib/shader/basic.vsh COPYONLY)
+add_custom_target(copy_assets
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/assets ${CMAKE_CURRENT_BINARY_DIR}/assets
+        )
+add_dependencies(assignment copy_assets)
