--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,12 @@ if (APPLE)
             "-framework IOKit"
             "-framework OpenGL"
             "-framework CoreVideo"
+            "-framework OpenCL"
             )
 endif ()
 
 find_package(OpenGL REQUIRED)
+find_package(OpenCL REQUIRED)
 
 if (CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR)
     message(FATAL_ERROR "Please select another Build Directory ! (and give it a clever name, like bin_Visual2012_64bits/)")
@@ -66,7 +68,7 @@ add_definitions(
         -DGL_SILENCE_DEPRECATION
 )
 
-add_executable(assignment lib/scene3d/object3d.cpp lib/mesh/mesh.cpp lib/application.cpp lib/mesh/geometry.cpp lib/stb_image_impl.cpp lib/mesh/material.cpp lib/scene3d/renderer.cpp lib/util/shader.cpp src/appmain.cpp lib/util/texture.cpp lib/importer/obj_loader.cpp)
+add_executable(assignment lib/scene3d/object3d.cpp lib/mesh/mesh.cpp lib/application.cpp lib/mesh/geometry.cpp lib/stb_image_impl.cpp lib/mesh/material.cpp lib/scene3d/renderer.cpp lib/util/shader.cpp src/appmain.cpp lib/util/texture.cpp lib/importer/obj_loader.cpp lib/raytracing/rt.cpp lib/raytracing/rt_program.cpp lib/shaders/raytracing.cl lib/raytracing/simcl.cpp)
 target_link_libraries(assignment
         ${ALL_LIBS}
         )
