--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -58,5 +58,6 @@ set(BUILD_SHARED_LIBS OFF)
 set(ASSIMP_NO_EXPORT ON)
 set(ASSIMP_BUILD_TESTS OFF)
 set(ASSIMP_BUILD_SAMPLES OFF)
+set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
 add_subdirectory(assimp-5.0.1)
 
