rt wip 11/03 with bug!

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 .idea
-cmake-build-debug
-cmake-build-release
+cmake-build-*
 _deps
 .DS_Store
